--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,89 @@
-<div class="about">About</div>
+<div class="container">
+    <div class="row">
+    <form class="form-horizontal">
+        <div>어떻게 도와드릴까요?</div>
+        <div class="col-sm-10">
+            <input type="text" class="form-control">
+        </div>
+    </form>
+    </div>
+    <div class="row">궁금하신 사항이 있나요? 여기서 문의하실 수 있습니다.</div>
+    <div>
+        <div>이용방법</div>
+        <div>전 세계 어디에서든지 특색있는 숙소를 찾아보세요</div>
+    </div>
+    <div>
+        <div>신뢰와 안전</div>
+        <div>에어비엔비가 신뢰할 수 있는 여행과 호스팅을 어떻게 제공하는지 알아보세요.</div>
+    </div>
+    <div>
+        <h1>추천 주제</h1>
+        <div>
+          <h2>결제 수단</h2>
+          <div>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>모두 보기</p>
+          </div>
+        </div>
+        <div>
+          <h2>결제 수단</h2>
+          <div>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>모두 보기</p>
+          </div>
+        </div>
+        <div>
+          <h2>결제 수단</h2>
+          <div>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>모두 보기</p>
+          </div>
+        </div>
+        <div>
+          <h2>결제 수단</h2>
+          <div>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>모두 보기</p>
+          </div>
+        </div>
+        <div>
+          <h2>결제 수단</h2>
+          <div>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>모두 보기</p>
+          </div>
+        </div>
+        <div>
+          <h2>결제 수단</h2>
+          <div>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+              <p>모두 보기</p>
+          </div>
+        </div>
+        <div>주제 더 보기</div>
+    </div>
+    <div>
+        <div>
+        <a href="#">피드백 보내기</a>
+        </div>
+        <div>
+            <div>
+                <p>아직 도움이 필요하신가요?</p>
+                <button class="btn btn-default">문의하기</button>
+            </div>
+        </div>
+    </div>
+</div>
+
