--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,24 +1,54 @@
 <div class="container">
+    <a routerLink="/" routerLinkActive="active">Home</a>
     <div class="row">
-    <form class="form-horizontal">
-        <div>어떻게 도와드릴까요?</div>
-        <div class="col-sm-10">
-            <input type="text" class="form-control">
+        <form class="form-horizontal">
+            <h1>어떻게 도와드릴까요?</h1>
+            <div class="col-sm-10">
+                <input type="text" class="form-control">
+            </div>
+        </form>
+    </div>
+    <div class="row">
+        <h2>궁금하신 사항이 있나요? 여기서 문의하실 수 있습니다.</h2>
+        <div class="col-md-6 big-box">
+            <div>이용방법</div>
+            <div>전 세계 어디에서든지 특색있는 숙소를 찾아보세요</div>
         </div>
-    </form>
+        <div class="col-md-6 big-box big-box-right">
+            <div>신뢰와 안전</div>
+            <div>에어비엔비가 신뢰할 수 있는 여행과 호스팅을 어떻게 제공하는지 알아보세요.</div>
+        </div>
     </div>
-    <div class="row">궁금하신 사항이 있나요? 여기서 문의하실 수 있습니다.</div>
-    <div>
-        <div>이용방법</div>
-        <div>전 세계 어디에서든지 특색있는 숙소를 찾아보세요</div>
-    </div>
-    <div>
-        <div>신뢰와 안전</div>
-        <div>에어비엔비가 신뢰할 수 있는 여행과 호스팅을 어떻게 제공하는지 알아보세요.</div>
-    </div>
-    <div>
+    <div class="row">
         <h1>추천 주제</h1>
-        <div>
+        <div class="col-md-4">
+            <h2>결제 수단</h2>
+            <div>
+                <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+                <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+                <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+                <p>모두 보기</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <h2>결제 수단</h2>
+            <div>
+                <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+                <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+                <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+                <p>모두 보기</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <h2>결제 수단</h2>
+            <div>
+                <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+                <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+                <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
+                <p>모두 보기</p>
+            </div>
+        </div>
+        <div class="col-md-4">
           <h2>결제 수단</h2>
           <div>
               <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
@@ -27,7 +57,7 @@
               <p>모두 보기</p>
           </div>
         </div>
-        <div>
+        <div class="col-md-4">
           <h2>결제 수단</h2>
           <div>
               <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
@@ -36,34 +66,7 @@
               <p>모두 보기</p>
           </div>
         </div>
-        <div>
-          <h2>결제 수단</h2>
-          <div>
-              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
-              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
-              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
-              <p>모두 보기</p>
-          </div>
-        </div>
-        <div>
-          <h2>결제 수단</h2>
-          <div>
-              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
-              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
-              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
-              <p>모두 보기</p>
-          </div>
-        </div>
-        <div>
-          <h2>결제 수단</h2>
-          <div>
-              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
-              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
-              <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
-              <p>모두 보기</p>
-          </div>
-        </div>
-        <div>
+        <div class="col-md-4">
           <h2>결제 수단</h2>
           <div>
               <p>에어비앤비가 지원하는 결제 수단에는 어떤 것들이 있나요?</p>
